--- a/index.html
+++ b/index.html
@@ -6,19 +6,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Password Generator</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <header>
-    <h1>Password Generator</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+        </div>
+        <div class="col-6">
+          <h1>Password Generator</h1>
+        </div>
+        <div class="col">
+        </div>
+      </div>
+
+
   </header>
-  <h2>Generate a Password</h2>
+  <div class="container">
+  <div class="row">
+      <div class="col">
+      </div>
+      <div class="col-6">
+          <h2>Generate a Password</h2>
+      </div>
+      <div class="col">
+      </div>
+    </div>
   <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
-  <button id="generate">Generate Password</button>
-  <button id="copy">
+  <div class="row">
+      <div class="col-lg-6">
+  <button id="generate" class="btn btn-primary">Generate Password</button>
+  <button id="copy" class="btn btn-light">
     Copy to Clipboard
   </button>
-  <script src="./script.js"></script>
+  <!-- <script src="./script.js"></script> -->
 </body>
 
 </html>
