--- a/index.html
+++ b/index.html
@@ -6,44 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Password Generator</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+
 </head>
 
 <body>
-  <header>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-        </div>
-        <div class="col-6">
-          <h1>Password Generator</h1>
-        </div>
-        <div class="col">
-        </div>
-      </div>
-
-
-  </header>
-  <div class="container">
-  <div class="row">
-      <div class="col">
-      </div>
-      <div class="col-6">
-          <h2>Generate a Password</h2>
-      </div>
-      <div class="col">
-      </div>
+  <div class="wrapper">
+    <header>
+      <h1>Password Generator</h1>
+    </header>
+    <h2>Generate a Password</h2>
+    <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
+    <br>
+    <div class="button">
+      <button id="generate" class="btn">Generate Password</button>
+      <button id="copy" class="btn" onclick="copyMe()">Copy to Clipboard</button>
     </div>
-  <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
-  <div class="row">
-      <div class="col-lg-6">
-  <button id="generate" class="btn btn-primary">Generate Password</button>
-  <button id="copy" class="btn btn-light">
-    Copy to Clipboard
-  </button>
-  <!-- <script src="./script.js"></script> -->
+  </div>
+  <script src="./script.js"></script>
+
 </body>
 
 </html>
